Ready for launch

--- a/config.toml
+++ b/config.toml
@@ -15,3 +15,4 @@ highlight_code = true
 highlight_theme = "inspired-github"
 smart_punctuation = true
 extra_syntaxes_and_themes = ["syntaxes"]
+insert_anchor_links = "heading"
